# TradingApp

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: app.h  db.h  version.h.in
src/: CMakeLists.txt  app.cpp  db.cpp  main.cpp
src/lib/: CMakeLists.txt  app.cpp  db.cpp
